# fofimon

./: CHANGES  CMakeLists.txt  INSTALL  LICENSE.3rdparty  NEWS  README.md  fofimon-defs.cmake
scripts/: arch_create.py  checktidy.py  debian_create.py  install_fofimon.py  sourcepackage.py  testall.py  uninstall_fofimon.py
scripts/priv/: checktidy.py  dd_install_fofimon.py  debian_src_versions.cmake  pk_install_fofimon.py
scripts/priv/arch.orig/: PKGBUILD.in
scripts/priv/debian.orig/: changelog.in  control.in  copyright  fofimon.1  fofimon.install  fofimon.manpages  rules
share/cmake/: CommonTesting.cmake  CommonUtil.cmake
src/: config.cc.in  config.h  evalargs.cc  evalargs.h  fofimodel.cc  fofimodel.h  inotifiersource.cc  inotifiersource.h  main.cc  printout.cc  printout.h  util.cc  util.h
src/cli/: config.cc.in  config.h  evalargs.cc  evalargs.h  main.cc  printout.cc  printout.h
test/: CMakeLists.txt  fakesource.cc  fakesource.h  forkingfixture.cc  forkingfixture.h  mainloopfixture.cc  mainloopfixture.h  tempfiletreefixture.cc  tempfiletreefixture.h  testFofiModel.cxx  testFofiModel01.cxx  testFofiModel02.cxx  testFofiModel03.cxx  testFofiModel04.cxx  testFofiModel05.cxx  testFofiModel06.cxx  testFofiModel07.cxx  testFofiModel08.cxx  testFofiModel09.cxx  testFofiModel10.cxx  testFofiModel11.cxx  testFofiModelF01.cxx  testUtil.cxx  testUtil01.cxx  testingcommon.h  testingutil.cc  testingutil.h
